# Sudoku

./: .gitignore  CMakeLists.txt  README.md  test.cpp
Sudoku/: game.txt  main.cpp  result.txt  sudoku.txt  sudoku_final.txt  sudoku_game.txt  test.cpp  test.txt
Sudoku/create_final/: create_final.cpp  create_final.h  sudoku_final.txt
Sudoku/create_game/: create_game.cpp  create_game.h
Sudoku/include/: board.h  create_final.h  create_game.h  solve_game.h  utils.h
Sudoku/src/: board.cpp  create_final.cpp  create_game.cpp  solve_game.cpp  utils.cpp
